@@ -1,7 +1,7 @@
 /***************************************************************************/
 /*                                                                         */
 /*                                 main.c                                  */
-/* Original code written by Daniel Hawkins. Last modified on 2014-05-28.   */
+/* Original code written by Daniel Hawkins. Last modified on 2014-05-29.   */
 /*                                                                         */
 /* The file defines the main function and several searching functions.     */
 /*                                                                         */
@@ -19,7 +19,7 @@ int main(int argc, char *argv[]){
         // argv[0] is the executable name, which I don't need.
         int parse_results = parseArgs(argv + 1, argc - 1);
         if (parse_results == -1){
-            logError(FATAL, "Invalid arguments discovered.");
+            log_event(FATAL, "Invalid arguments discovered.");
             free_settings();
             return 1;
         }
@@ -30,7 +30,7 @@ int main(int argc, char *argv[]){
         }
         // If no arguments set the root directory, error out
         if (!settings.root_dirs){
-            logError(FATAL, "No root directory specified in search.");
+            log_event(FATAL, "No root directory specified in search.");
             free_settings();
             return 1;
         }
@@ -42,11 +42,11 @@ int main(int argc, char *argv[]){
             searchFolder(thisDir->dir);
             thisDir = thisDir->next;
         }
-        printf("The matches have been stored in %s.\n", settings.output_file);
+        log_event(INFO, "The matches have been stored in %s.", settings.output_file);
         free_settings();
     }
     else{
-        logError(FATAL, "MapChecker requires arguments: ./MapChecker -s <search string> -d <path to folder to search in> [flags].");
+        log_event(FATAL, "MapChecker requires arguments: ./MapChecker -s <search string> -d <path to folder to search in> [flags].");
         return 1;
     }
     return 0;
